# C7Engine_AppTemplate

./: CMakeLists.txt  README.md
assets/shaders/: basic.shader  basic_lighting.shader  basic_texture.shader  basic_white.shader  depth.shader  directional_shadow.shader  point_shadow.shader  skybox_reflect.shader
demos/: 3DDirectionalShadows.cpp  3DModelLoading.cpp  3DMulticolorCubeApp.cpp  3DMulticolorTriangleApp.cpp  3DPerspectiveShadowScene.cpp  3DPointShadows.cpp  3DRefletingSkyboxOnCube.cpp  3DSkyboxWithCubeApp.cpp  MulticolorTriangleApp.cpp
src/: Application.cpp
